Fix #8 - Category list spacing

--- a/blocks/component/_collection.scss
+++ b/blocks/component/_collection.scss
@@ -91,6 +91,23 @@ nav.collection {
       width: 25%;
     }
   }
+  &.right-space {
+    @media (min-width: 960px) and (max-width: 1299px) {
+      li {
+        width: 33%;
+      }
+    }
+    @media (min-width: 600px) and (max-width: 959px) {
+      li {
+        width: 49%;
+      }
+    }
+    @media (min-width: 1300px) {
+      li {
+        width: 24%;
+      }
+    }
+  }
   &.limited {
     @media (max-width: 599px) {
       li {
